k8s/config/dpl-graphql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql-engine
  namespace: pchclient-dev
  labels:
    project: pchclient
    app: graphql
    env: dev
spec:
  selector:
    matchLabels:
      project: pchclient
      app: graphql
      env: dev
  replicas: 1
  template:
    metadata:
      labels:
        project: pchclient
        app: graphql
        env: dev
    spec:
      volumes:
      - name: configvlm
        configMap:
          name: graphql-cm
      # - name: hasura-disk
      #   persistentVolumeClaim:
      #     claimName: graphql-pvc
      containers:
      - image: hasura/graphql-engine:v1.3.3.cli-migrations
        imagePullPolicy: IfNotPresent
        name: graphql-engine
        volumeMounts:
        - name: configvlm
          mountPath: /hasura-migrations
        # - mountPath: "/hasura-migrations"
        #   name: hasura-disk
        #   readOnly: false
        resources:
          limits:
            cpu: 500m
            memory: 768Mi
          requests:
            cpu: 50m
            memory: 256Mi
        ports:
        - name: "http"
          containerPort: 8080
          protocol: "TCP"
