k8s/config/srv-graphql.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    project: pchclient
    app: graphql
    env: dev
  name:  graphql
  namespace: pchclient-dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    project: pchclient
    app: graphql
    env: dev
  type: ClusterIP
