k8s/config/srv-pchclient-ui.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    project: pchclient
    app: pchclient-ui
    env: dev
  name:  pchclient-ui
  namespace: pchclient-dev
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    project: pchclient
    app: pchclient-ui
    env: dev
  type: ClusterIP
